<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sounds">

    <fragment
        android:id="@+id/navigation_sounds"
        android:name="com.soninhodobeb.ui.sounds.SoundsFragment"
        android:label="@string/fragment_sounds"
        tools:layout="@layout/fragment_sounds" />

    <fragment
        android:id="@+id/navigation_premium"
        android:name="com.soninhodobeb.ui.premium.PremiumFragment"
        android:label="@string/fragment_premium"
        tools:layout="@layout/fragment_premium" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.soninhodobeb.ui.settings.SettingsFragment"
        android:label="@string/fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>