<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sounds.SoundsFragment">

    <ImageView
        android:id="@+id/img_home"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sleep_stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Spinner
        android:id="@+id/spinner_sound_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/selector_background"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_home" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/sound_group_selector"
        style="@style/CardTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_home">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/selector_img"
                    style="@style/IconsTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

                <LinearLayout
                    android:id="@+id/selector_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:elevation="0dp"
        android:outlineProvider="none"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/playerbar_background"
            android:paddingHorizontal="18dp">

            <RelativeLayout
                android:id="@+id/rv_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:padding="8dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_baseline_play_arrow_24"
                    android:theme="@style/CardTheme"
                    app:elevation="2dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toStartOf="@id/btn_expand"
                    android:elevation="4dp"
                    android:src="@drawable/ic_baseline_timer_24"
                    android:theme="@style/CardTheme"
                    app:fabSize="mini" />

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@id/btn_timer"
                    android:textStyle="bold" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="4dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                    android:theme="@style/CardTheme"
                    app:fabSize="mini" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/ll_timer_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_buttons"
                android:animateLayoutChanges="true"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/timer_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/btn_ten_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/secondaryLightColor"
                            android:text="@string/ten_minutes" />

                        <RadioButton
                            android:id="@+id/btn_thirty_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/secondaryLightColor"
                            android:text="@string/thirty_minutes" />

                        <RadioButton
                            android:id="@+id/btn_one_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/secondaryLightColor"
                            android:text="@string/one_hour" />

                        <RadioButton
                            android:id="@+id/custom_timer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/secondaryLightColor"
                            android:text="@string/custom_timer" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_buttons"
                android:animateLayoutChanges="true"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/ll_player_controls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_sounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sound_group_selector">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox_sounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:alignItems="center"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="space_evenly" />

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>